<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.lxy.sf.myappportfolio.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_jianju"
            android:layout_marginTop="@dimen/viewtop"
            android:text="@string/my_nanodegree_apps"
            android:textColor="@color/colorView"
            android:textSize="@dimen/textsize" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginBottom="@dimen/view_jianju"
            android:background="@color/colorView"
            android:text="@string/new_button1"
            android:layout_alignRight="@+id/textView"
            android:layout_alignLeft="@+id/textView" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button"
            android:layout_marginBottom="@dimen/view_jianju"
            android:background="@color/colorView"
            android:text="@string/new_button2"
            android:layout_alignRight="@+id/button"
            android:layout_alignLeft="@+id/button" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button2"
            android:layout_marginBottom="@dimen/view_jianju"
            android:background="@color/colorView"
            android:text="@string/new_button3"
            android:layout_alignRight="@+id/button2"
            android:layout_alignLeft="@+id/button2" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button3"
            android:layout_marginBottom="@dimen/view_jianju"
            android:background="@color/colorView"
            android:text="@string/new_button4"
            android:layout_alignRight="@+id/button3"
            android:layout_alignLeft="@+id/button3" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button4"
            android:layout_marginBottom="@dimen/view_jianju"
            android:background="@color/colorView"
            android:text="@string/new_button5"
            android:layout_alignRight="@+id/button4"
            android:layout_alignLeft="@+id/button4" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button5"
            android:layout_marginBottom="@dimen/view_jianju"
            android:background="@color/colorView"
            android:text="@string/new_button6"
            android:layout_alignRight="@+id/button5"
            android:layout_alignLeft="@+id/button5" />

    </RelativeLayout>
</ScrollView>
